Switch to using harbor for docker artifacts

--- a/k8s/vice-default-backend.yml
+++ b/k8s/vice-default-backend.yml
@@ -42,7 +42,7 @@ spec:
                 path: jobservices.yml
       containers:
       - name: vice-default-backend
-        image: discoenv/vice-default-backend
+        image: harbor.cyverse.org/de/vice-default-backend
         resources:
           requests:
             cpu: "1m"
