--- a/k8s/vice-default-backend.yml
+++ b/k8s/vice-default-backend.yml
@@ -47,9 +47,11 @@ spec:
           requests:
             cpu: "1m"
             memory: "128Mi"
+            ephemeral-storage: "1Gi"
           limits:
             cpu: "100m"
             memory: "256Mi"
+            ephemeral-storage: "1Gi"
         args:
           - --config
           - /etc/iplant/de/jobservices.yml
