switched to a newer Skaffold file format so that we can specify the platform

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,14 +1,17 @@
-apiVersion: skaffold/v1
+apiVersion: skaffold/v3
 kind: Config
 metadata:
   name: vice-default-backend
-deploy:
-  kubectl:
-    manifests:
-    - k8s/vice-default-backend.yml
 build:
+  artifacts:
+    - image: harbor.cyverse.org/de/vice-default-backend
+  platforms:
+    - "linux/amd64"
   tagPolicy:
     gitCommit: {}
-  artifacts:
-  - image: harbor.cyverse.org/de/vice-default-backend
   local: {}
+manifests:
+  rawYaml:
+    - k8s/vice-default-backend.yml
+deploy:
+  kubectl: {}
