--- a/k8s/vice-default-backend.yml
+++ b/k8s/vice-default-backend.yml
@@ -16,24 +16,15 @@ spec:
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
-          - labelSelector:
-              matchExpressions:
-              - key: de-app
-                operator: In
-                values:
-                - vice-default-backend
-            topologyKey: kubernetes.io/hostname
+            - labelSelector:
+                matchExpressions:
+                  - key: de-app
+                    operator: In
+                    values:
+                      - vice-default-backend
+              topologyKey: kubernetes.io/hostname
       restartPolicy: Always
       volumes:
-        - name: localtime
-          hostPath:
-            path: /etc/localtime
-        - name: timezone
-          configMap:
-            name: timezone
-            items:
-              - key: timezone
-                path: timezone
         - name: service-configs
           secret:
             secretName: service-configs
@@ -41,45 +32,45 @@ spec:
               - key: jobservices.yml
                 path: jobservices.yml
       containers:
-      - name: vice-default-backend
-        image: harbor.cyverse.org/de/vice-default-backend
-        resources:
-          requests:
-            cpu: "1m"
-            memory: "128Mi"
-            ephemeral-storage: "1Gi"
-          limits:
-            cpu: "100m"
-            memory: "256Mi"
-            ephemeral-storage: "1Gi"
-        args:
-          - --config
-          - /etc/iplant/de/jobservices.yml
-        ports:
-          - name: listen-port
-            containerPort: 60000
-        volumeMounts:
-          - name: localtime
-            mountPath: /etc/localtime
-            readOnly: true
-          - name: timezone
-            mountPath: /etc/timezone
-            subPath: timezone
-          - name: service-configs
-            mountPath: /etc/iplant/de
-            readOnly: true
-        livenessProbe:
-          httpGet:
-            path: /healthz
-            port: 60000
-          initialDelaySeconds: 5
-          periodSeconds: 5
-        readinessProbe:
-          httpGet:
-            path: /healthz
-            port: 60000
-          initialDelaySeconds: 5
-          periodSeconds: 5
+        - name: vice-default-backend
+          image: harbor.cyverse.org/de/vice-default-backend
+          resources:
+            requests:
+              cpu: "1m"
+              memory: "128Mi"
+              ephemeral-storage: "1Gi"
+            limits:
+              cpu: "100m"
+              memory: "256Mi"
+              ephemeral-storage: "1Gi"
+          args:
+            - --config
+            - /etc/iplant/de/jobservices.yml
+          env:
+            - name: TZ
+              valueFrom:
+                configMapKeyRef:
+                  name: timezone
+                  key: timezone
+          ports:
+            - name: listen-port
+              containerPort: 60000
+          volumeMounts:
+            - name: service-configs
+              mountPath: /etc/iplant/de
+              readOnly: true
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 60000
+            initialDelaySeconds: 5
+            periodSeconds: 5
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 60000
+            initialDelaySeconds: 5
+            periodSeconds: 5
 ---
 apiVersion: v1
 kind: Service
